fix: add white-space: nowrap for label elements
- add white-space: nowrap for label elements within
  the task list element

--- a/src/style.css
+++ b/src/style.css
@@ -255,6 +255,7 @@ li.selected {
   display: flex;
   flex: 1;
   align-items: center;
+  white-space: nowrap;
   overflow-x: auto;
 }
 .btn-bg.more-btn {
